# embuddy

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/: index.html
docs/: api.md  index.md
search/: search_index.json
src/embuddy/: __init__.py  core.py  errors.py
tests/: test_embuddy.py
